[gd_scene load_steps=16 format=3 uid="uid://dfpsx5ep5c5yj"]

[ext_resource type="Texture2D" uid="uid://dcde1ol7mawje" path="res://assets/textures/gem.png" id="1_rpvnd"]
[ext_resource type="Script" uid="uid://cfhjqyp58slq" path="res://scripts/gem.gd" id="1_v1fvi"]
[ext_resource type="PackedScene" uid="uid://d1quvjctoedr4" path="res://objects/point_2d.tscn" id="3_l5vhx"]
[ext_resource type="AudioStream" uid="uid://uwq2pm247de7" path="res://assets/audio/Freesound/WindowBreak.ogg" id="4_albtb"]
[ext_resource type="AudioStream" uid="uid://cc5cw36h4qn0u" path="res://assets/audio/Freesound/WindowBreak-2.ogg" id="5_t1ww7"]
[ext_resource type="AudioStream" uid="uid://co1jm6l8fo7by" path="res://assets/audio/Freesound/WindowBreak-3.ogg" id="6_5gplg"]
[ext_resource type="AudioStream" uid="uid://ncj6v0hw78nm" path="res://assets/audio/Freesound/WindowBreak-4.ogg" id="7_ngvbr"]

[sub_resource type="Gradient" id="Gradient_uhupr"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.460784, 0.769608, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.279071, 1, 1, 1, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l5vhx"]
gradient = SubResource("Gradient_uhupr")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_v1fvi"]
radius = 12.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l5vhx"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_albtb"]
_data = [Vector2(1e-05, 0), 0.0, 19.1013, 0, 0, Vector2(0.126016, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.81701, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_61mte"]
curve = SubResource("Curve_albtb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3ueby"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 16, 0)
angle_max = 360.0
spread = 180.0
initial_velocity_min = 40.0
initial_velocity_max = 80.0
angular_velocity_min = -200.0
angular_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -30.0
linear_accel_max = -10.0
scale_min = 1.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_61mte")
anim_offset_max = 1.0
collision_use_scale = true

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3ueby"]
streams_count = 4
stream_0/stream = ExtResource("4_albtb")
stream_1/stream = ExtResource("5_t1ww7")
stream_2/stream = ExtResource("6_5gplg")
stream_3/stream = ExtResource("7_ngvbr")

[node name="Gem" type="CharacterBody2D"]
visibility_layer = 5
collision_layer = 34
motion_mode = 1
wall_min_slide_angle = 0.0349066
script = ExtResource("1_v1fvi")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.7, 0.7, 0.7, 1)
scale = Vector2(2, 2)
texture = ExtResource("1_rpvnd")

[node name="Point2D" parent="." instance=ExtResource("3_l5vhx")]
unique_name_in_owner = true
texture = SubResource("GradientTexture2D_l5vhx")
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v1fvi")

[node name="BreakParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = -2
material = SubResource("CanvasItemMaterial_l5vhx")
emitting = false
texture = ExtResource("1_rpvnd")
one_shot = true
explosiveness = 1.0
fixed_fps = 0
draw_order = 0
process_material = SubResource("ParticleProcessMaterial_3ueby")

[node name="BreakSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_3ueby")
volume_db = -8.0
max_distance = 350.0
